# rustyscript

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  LICENSE  readme.md
.github/workflows/: build.yml  docs.yml  examples.yml  linter.yml  op_whitelist.yml  publish.yml  rust.yml  tests.yml
benches/: runtime.rs
examples/: async_eval.rs  async_javascript.rs  background_tasks.rs  benchmark.rs  call_rust_from_js.rs  create_snapshot.rs  custom_import_logic.rs  custom_import_resolution.rs  custom_import_schemes.rs  custom_import_url_schemes.rs  custom_runtimes.rs  custom_threaded_worker.rs  default_threaded_worker.rs  entrypoint_functions.rs  extending_runtime.rs  functions_and_values.rs  hello_world.rs  interactive_prompt.rs  max_heap_size.rs  module_import.rs  module_loader_cache.rs  multiple_modules.rs  op_whitelist.rs  os_exit.rs  removing_extensions.rs  runtime_extensions.rs  serialized_types.rs  thread_safety.rs  typescript_modules.rs  url_import.rs  web_features.rs  websocket.rs  worker.rs  worker_pool.rs
examples/example_extension/: example_extension.js  example_extension.rs  mod.rs
examples/ext/: example_extension.rs
examples/javascript/: example_extension.js  example_module.js  multiple_modules.js
examples/node_import/: main.rs  package.json
ext/: Cargo.toml
ext/console/: Cargo.toml  lib.rs
ext/crypto/: Cargo.toml  lib.rs
ext/url/: Cargo.toml  init_url.js  lib.rs
ext/web/: Cargo.toml  init_web.js  lib.rs
ext/web_stub/: 01_dom_exception.js  Cargo.toml  lib.rs
ext/webidl/: Cargo.toml  lib.rs
src/: async_bridge.rs  async_runtime.rs  cache_provider.rs  error.rs  inner_runtime.rs  js_function.rs  js_value.rs  lib.rs  module.rs  module_handle.rs  module_loader.rs  module_wrapper.rs  op_whitelist.js  op_whitelist.rs  runtime.rs  runtime_builder.rs  script.rs  snapshot_builder.rs  static_runtime.rs  traits.rs  transl8.rs  transpiler.rs  utilities.rs  v8_serializer.rs  v8_value.rs  worker.rs
src/ext/: deno_web_stub.rs  extensionlist.rs  init_console.js  init_console.rs  init_crypto.js  init_crypto.rs  init_fetch.js  init_fetch.rs  init_url.js  init_url.rs  init_web.js  init_web.rs  init_webidl.js  init_webidl.rs  js_playground.js  js_playground.rs  mod.rs  op_whitelist.js  options.rs  rustyscript.js  rustyscript.rs
src/ext/broadcast_channel/: init_broadcast_channel.js  mod.rs  wrapper.rs
src/ext/cache/: cache_backend.rs  init_cache.js  memory.rs  mod.rs  simple.rs
src/ext/console/: init_console.js  mod.rs
src/ext/cron/: init_cron.js  mod.rs
src/ext/crypto/: init_crypto.js  mod.rs
src/ext/ffi/: init_ffi.js  mod.rs
src/ext/fs/: init_fs.js  mod.rs
src/ext/http/: http_runtime.rs  init_http.js  mod.rs
src/ext/io/: init_io.js  mod.rs  tty.rs  tty_unix.rs  tty_windows.rs
src/ext/io/tty/: unix.rs  windows.rs
src/ext/kv/: backend.rs  init_kv.js  mod.rs
src/ext/napi/: mod.rs
src/ext/node/: cjs_translator.rs  init_node.js  mod.rs  resolvers.rs
src/ext/os/: init_os.js  mod.rs  test.rs
src/ext/runtime/: init_runtime.js  mod.rs
src/ext/rustyscript/: callbacks.rs  mod.rs  rustyscript.js
src/ext/telemetry/: mod.rs
src/ext/url/: mod.rs
src/ext/web/: init_errors.js  init_fetch.js  init_net.js  init_telemetry.js  init_web.js  mod.rs  options.rs  permissions.rs
src/ext/web_stub/: 00_webidl.js  01_dom_exception.js  02_timers.js  05_base64.js  encoding.rs  init_stub.js  mod.rs  timers.rs
src/ext/webgpu/: init_webgpu.js  mod.rs
src/ext/webidl/: mod.rs
src/ext/websocket/: init_websocket.js  mod.rs
src/ext/webstorage/: init_webstorage.js  mod.rs
src/js_value/: function.rs  map.rs  promise.rs  string.rs
src/module_loader/: cache_provider.rs  import_provider.rs  inner_loader.rs
src/rustyext/: mod.rs
tools/: Cargo.toml  Readme.md  update.rs
